[gd_scene load_steps=3 format=3 uid="uid://det48e24b3j7b"]

[ext_resource type="Script" uid="uid://nopev2xb8r8r" path="res://scripts/cooking_minigame.gd" id="1_nsvnn"]
[ext_resource type="Texture2D" uid="uid://d26rq8sn4y5jo" path="res://assets/fog√£o.png" id="2_nsvnn"]

[node name="CookingMinigame" type="Control"]
custom_minimum_size = Vector2(175, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nsvnn")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(215, 175)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_nsvnn")

[node name="ToolSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 84.0
offset_right = 9.0
offset_bottom = 84.0
mouse_filter = 0

[node name="IngredientSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 112.0

[node name="HeatBar" type="ColorRect" parent="."]
custom_minimum_size = Vector2(175, 16)
layout_mode = 0
offset_left = 21.0
offset_top = 176.0
offset_right = 196.0
offset_bottom = 192.0
color = Color(0.340339, 0.340339, 0.340339, 0.647)

[node name="ZoneCool" type="ColorRect" parent="HeatBar"]
custom_minimum_size = Vector2(50, 16)
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
color = Color(0.269, 0.584, 0.824, 0.75)

[node name="ZoneIdeal" type="ColorRect" parent="HeatBar"]
custom_minimum_size = Vector2(60, 16)
layout_mode = 0
offset_left = 50.0
offset_right = 115.0
offset_bottom = 16.0
color = Color(0, 0.8, 0.2, 0.75)

[node name="ZoneBurn" type="ColorRect" parent="HeatBar"]
layout_mode = 0
offset_left = 115.0
offset_right = 175.0
offset_bottom = 16.0
color = Color(0.785664, 0.231419, 0.15503, 0.75)

[node name="HeatMarker" type="ColorRect" parent="HeatBar"]
custom_minimum_size = Vector2(6, 16)
layout_mode = 0
offset_right = 8.0
offset_bottom = 16.0

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 39.0
